--- a/app/templates/carburant-list.html
+++ b/app/templates/carburant-list.html
@@ -81,8 +81,8 @@
                                                                     <a class="btn btn-sm btn-outline-secondary border me-2" data-bs-toggle="tooltip" href="javascript:void(0)" onclick="openEditModal({{ carburant.id }})" data-bs-original-title="Modifier">
 																		<svg height="24" viewBox="0 0 24 24" width="24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M17.25 10.9921C15.129 11.6991 12.3009 8.87105 13.0079 6.75M13.8793 5.87857L9.30971 10.4482C7.3231 12.4348 5.91376 14.924 5.23236 17.6496L5.01156 18.5328C4.94276 18.808 5.19204 19.0572 5.46723 18.9884L6.35044 18.7676C9.07604 18.0862 11.5652 16.6769 13.5518 14.6903L18.1214 10.1207C18.684 9.55813 19 8.79516 19 7.99962C19 6.34297 17.657 5 16.0004 5C15.2048 5 14.4419 5.31603 13.8793 5.87857Z" stroke="none" stroke-width="1.5"></path> </g></svg>
 																	</a>
-																	<a href="project-details" class="border br-5 px-2 py-1 text-muted d-flex align-items-center" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fe fe-more-vertical"></i></a>
-																	{% comment %} <div class="dropdown-menu dropdown-menu-start">
+																	{% comment %} <a href="project-details" class="border br-5 px-2 py-1 text-muted d-flex align-items-center" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fe fe-more-vertical"></i></a>
+																	<div class="dropdown-menu dropdown-menu-start">
 																		<a class="dropdown-item" href="project-details"><i class="fe fe-edit-2 me-2"></i>Modifier</a>
 																		<a class="dropdown-item" href="#"><i class="fe fe-share me-2"></i> Suspend</a>
 																		<a class="dropdown-item" href="javascript:void(0)" onclick="deleteCarburant({{ carburant.id }})">
