--- a/app/templates/project-new-form.html
+++ b/app/templates/project-new-form.html
@@ -207,7 +207,7 @@
 										geozone: Number(zone_id)
 									}
 
-									fetch('http://localhost:8000/api/save2/', {
+									fetch('/save2/', {
 										method: 'POST',
 										headers: {
 											'Accept': 'application/json',
