--- a/app/templates/project-new.html
+++ b/app/templates/project-new.html
@@ -279,7 +279,7 @@ map.on(L.Draw.Event.DELETED, function(event) {
     let data = JSON.parse(localStorage.getItem('data'));
     console.log(data);
 
-    fetch('http://localhost:8000/api/save/', {
+    fetch('/save/', {
         method: 'POST',
         headers: {
             'Accept': 'application/json',
