--- a/app/templates/local-technique.html
+++ b/app/templates/local-technique.html
@@ -520,7 +520,7 @@
             let data = JSON.parse(localStorage.getItem('data'));
             console.log(data);
         
-            fetch('http://localhost:8000/api/save/', {
+            fetch('/save/', {
                 method: 'POST',
                 headers: {
                     'Accept': 'application/json',
