--- a/app/templates/parcelle-new-form.html
+++ b/app/templates/parcelle-new-form.html
@@ -214,7 +214,7 @@
 										geozone: Number(zone_id)
 									}
 									console.log(data);
-									fetch('http://localhost:8000/api/saveFormParcelle/', {
+									fetch('/saveFormParcelle/', {
 										method: 'POST',
 										headers: {
 											'Accept': 'application/json',
