--- a/app/templates/components/layouts/landing/app-sidebar.html
+++ b/app/templates/components/layouts/landing/app-sidebar.html
@@ -45,7 +45,7 @@
 									</ul>
 									<div class="header-nav-right d-flex">
 										<a href="signin" target="_blank" class="btn btn-pill btn-outline-primary btn-w-md py-2 me-1 my-auto  d-lg-none d-xl-block d-block">
-											Sign up
+											Sign in
 										</a>
 										<a href="home" target="_blank" class="btn btn-pill btn-primary btn-w-md py-2 my-auto d-lg-none d-xl-block d-block">
 											Get Started
