--- a/app/templates/components/layouts/app-sidebar.html
+++ b/app/templates/components/layouts/app-sidebar.html
@@ -517,7 +517,7 @@
 				</li>
 				<!-- Section Gestion des Filtres -->
 				<li class="slide">
-					<a class="side-menu__item has-link" href="{% url 'filtre_vegetation_view' %}">
+					<a class="side-menu__item has-link" href="{% url 'admin_filtre_view' %}">
 						<img src="{% static 'assets/images/icons/management.png' %}" class="side-menu__icon" />
 						<span class="side-menu__label">Gestion des Filtres</span>
 					</a>
