--- a/app/templates/manage_groups_permissions.html
+++ b/app/templates/manage_groups_permissions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestion des Permissions de Groupes</title>
+    <title>Magon</title>
     {% include 'components/layouts/styles.html' %}
 </head>
 <body class="ltr app sidebar-mini light-mode">
