--- a/app/templates/carburant-list.html
+++ b/app/templates/carburant-list.html
@@ -67,7 +67,7 @@
 														<tr>
 															<td class="text-muted fs-15 fw-semibold text-center">{{ forloop.counter }}</td>
 															<td>
-																<h6 class="mb-0 fs-14 fw-semibold"><a href="project-details" class="float-start">{{ carburant.nom }}</h6>
+																<h6 class="mb-0 fs-14 fw-semibold"><a href="#" class="float-start">{{ carburant.nom }}</h6>
 															</td>
 															<td class="text-muted fs-15 fw-semibold">{{ carburant.type }}</td>
 															<td class="text-muted fs-15 fw-semibold">{{ carburant.quantite }}</td>
